test/variables/backPropagateOverTuple.chpl
var x, (y, z) = (1,2), w = 3;
